# fyrplayer

./: .gitignore  README.md  build.gradle  change_recorder_player.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fanyiran/ffmpegvideo/: FFVideoPlayer.java  MainActivity.java  VideoInfo.java  VideoListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
fcamera/: build.gradle
fcamera/src/main/: AndroidManifest.xml
ffmpeglib/: build.gradle
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: CMakeLists.txt  ffmpeg_bridge.cpp  ffmpeg_config.h  ffmpeg_helper.cpp  ffmpeg_helper.h  ffmpeg_status.h  ffmpegcaller.cpp
ffmpeglib/src/main/cpp/include/libavutil/: ffversion.h
ffmpeglib/src/main/java/com/fanyiran/ffmpeglib/: FFmpegHelper.java
fmediaretriever/: build.gradle
fmediaretriever/src/main/: AndroidManifest.xml
fmediaretriever/src/main/java/com/cosmos/fmediaretriever/: MediaRetriever.java  MetadataRetriever.java
fopengl/: README.md  build.gradle
fopengl/document/: OpenGLES 入门.md  OpenGLES 进阶.md  opengles 入门.pptx
fopengl/document/imgs/: model.html
fopengl/src/main/: AndroidManifest.xml
fopengl/src/main/java/com/fanyiran/fopengl/: GLCameraRender.kt  GLESHelper.kt  GLRender.kt  GlSurfaceViewTest.kt  MyApplication.kt  OpenglProgramHelper.kt
fopengldemo/: build.gradle
fopengldemo/src/main/: AndroidManifest.xml
fopengldemo/src/main/java/com/fanyiran/fopengldemo/: MainActivity.kt
fopengldemo/src/main/res/layout/: activity_opengl.xml
fopengldemo/src/main/res/values/: strings.xml
fplayer/: build.gradle
fplayer/src/main/cpp/ffplayer/: IDecoder.h  IDemux.cpp
fplayer/src/main/java/com/fanyiran/mediaplayer/: MainActivity.java  MyApplication.java
fplayer/src/main/res/layout/: activity_main.xml
frecorder/: build.gradle
frecorder/src/main/: AndroidManifest.xml
frecorder/src/main/res/raw/: fragment.shader  vextex.shader
frecorder/src/main/res/values/: dimens.xml
frecorderdemo/: build.gradle
frecorderdemo/src/main/: AndroidManifest.xml
frecorderdemo/src/main/java/com/fanyiran/frecorderdemo/: MainActivity.java  MyApplication.java
frecorderdemo/src/main/res/layout/: activity_main.xml
frecorderdemo/src/main/res/values/: strings.xml
fyrplayer/: README.md  build.gradle
fyrplayer/src/androidTest/java/com/fanyiran/mediaplayer/: ExampleInstrumentedTest.java
fyrplayer/src/main/: AndroidManifest.xml
fyrplayer/src/main/cpp/ffmpegplayer/: CMakeLists.txt  ffmpegcaller.cpp
fyrplayer/src/main/cpp/ffplayer/: BaseThread.cpp  BaseThread.h  IDecoder.cpp  IDemux.h  ILog.h
fyrplayer/src/main/java/com/fanyiran/mediaplayer/: MainActivity.java
fyrplayer/src/main/res/layout/: activity_main.xml
fyrplayer/src/test/java/com/fanyiran/mediaplayer/: ExampleUnitTest.java
fyrrecorder/: build.gradle
fyrrecorder/src/main/: AndroidManifest.xml
fyrrecorder/src/main/cpp/ffmpegrecorder/: CMakeLists.txt  ffmpeg_helper.cpp  ffmpeg_helper.h
fyrrecorder/src/main/res/layout/: activity_main.xml
fyrrecorder/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+116 files in other folders)
